[tool.poetry]
name = "compy"
version = "0.1.0"
description = ""
authors = ["Yibo Wei <david_wyb2001@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygobject-stubs = "^2.11.0"
pygobject = "^3.48.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E402"]
